added custom components in home page

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,13 @@
 #container a {
   text-decoration: none;
 }
+
+ion-menu-button {
+    color: #ffffff;
+}
+
+ion-grid {
+  width: 100%;
+  height: 50px;
+  background-color: #f5424b;
+}
