--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,25 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header></app-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<app-mobilenavigation></app-mobilenavigation>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<div class="side-menu">
+  <ion-grid>
+    <ion-row>
+      <ion-col size="auto">
+        <div>
+          <ion-menu-button></ion-menu-button>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</div>
+<app-store-locator></app-store-locator>
+
+
+<ion-content padding>
+  <app-deal-tile></app-deal-tile>
 </ion-content>
+
+<ion-toolbar>
+  <app-botton-navigation ></app-botton-navigation>
+</ion-toolbar>
