added loading dialog and pwa element

--- a/src/app/deal-tile/deal-tile.component.html
+++ b/src/app/deal-tile/deal-tile.component.html
@@ -31,14 +31,14 @@
             </ion-col>
             <ion-col>
               <ion-text class="bold-txt">
-                Everyday Price <strike>6.89$</strike>
+                Everyday Price 6.89$
               </ion-text>
             </ion-col>
           </ion-row>
           <ion-row>
             <ion-col class="ion-text-right">
               <ion-text class="bold-txt">
-                Promo Price <strike>6.20$</strike>
+                Promo Price 6.20$
               </ion-text>
             </ion-col>
           </ion-row>
