--- a/src/app/store-locator/store-locator.component.html
+++ b/src/app/store-locator/store-locator.component.html
@@ -13,7 +13,8 @@
         <div class="ion-text-end">
           <ion-icon name="location-outline">Kanpur Up India</ion-icon>
           <ion-text>
-            {{latitude + " " + longitude}}
+            <!-- {{latitude + " " + longitude}} -->
+            {{address}}
           </ion-text>
         </div>
       </ion-col>
