--- a/src/app/mobilenavigation/mobilenavigation.component.html
+++ b/src/app/mobilenavigation/mobilenavigation.component.html
@@ -8,11 +8,12 @@
   
   
     <ion-content>
-      <ion-list>
+      <ion-list *ngFor="let pages of navigate"> 
       <ion-menu-toggle auto-hide="true">
-        <ion-item>Item 1</ion-item>
-        <ion-item>Item 2</ion-item>
-        <ion-item>Item 3</ion-item>
+        <ion-item [routerLink]="pages.url" routerDirection="forward">
+          <ion-icon [name]="pages.icon" slot="start"></ion-icon>
+             {{pages.title}} 
+      </ion-item>
       </ion-menu-toggle>
       </ion-list>
     </ion-content>
