geocoading related changes.

--- a/src/app/store-locator/store-locator.component.html
+++ b/src/app/store-locator/store-locator.component.html
@@ -14,7 +14,7 @@
           <ion-icon name="location-outline">Kanpur Up India</ion-icon>
           <ion-text>
             <!-- {{latitude + " " + longitude}} -->
-            {{address}}
+            {{address == null ? latitude + " " + longitude : address}}
           </ion-text>
         </div>
       </ion-col>
